# rust-basic-crud

./: Cargo.toml  README.md
src/: controllers.rs  main.rs  models.rs
