[package]
name = "rust-basic-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
actix-web = "4"
validator = { version = "0.18.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
utoipa = { version = "4.2.3", features = ["actix_extras"] }
sea-orm = { version = "1.0.1", features = ["sqlx-postgres"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }